--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
-
-version : "3"
+version: "3"
 services:
   web:
-    restart : always      
-    build : 
-      context : .
-      dockerfile : Dj
-    ports :
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    ports:
       - "3000:3000"
     volumes:
+      - /app/node_modules
       - .:/app
-      - /app/node_modules 
-       
+  tests:
+    stdin_open: true
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - .:/app
+    command: ["npm", "run", "test"]
